--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.application.name=ecommerce
-# MySQL Database Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/Ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerncedb
 spring.datasource.username=root
-spring.datasource.password=Mercy@2006
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=root
 
-# JPA & Hibernate Settings
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
